[tool.poetry]
name = "automation-servicr"
version = "0.1.0"
description = "Automation API skeleton project"
authors = ["Adam Schwartz <adam.schwartz@citihub.com>"]
license = "BFD"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
requests = "^2.26.0"
pytest = "^6.2.4"
pylint = "^2.10.2"
black = "^21.8b0"
pydantic = "^1.9.0"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
